--- a/index.html
+++ b/index.html
@@ -246,12 +246,10 @@
             <p>When the {{selectAudioOutput}} method is called,
             the User Agent MUST run the following steps:</p>
             <ol>
-              <li><p>If the method call is not <a class=FIXME
-              href="https://html.spec.whatwg.org/multipage/interaction.html#triggered-by-user-activation">
-              triggered by user activation</a>,
-              return a promise rejected with a {{DOMException}} object whose
-              {{DOMException/name}} attribute has the value {{InvalidStateError}}.
-              </p></li>
+              <li><p>If the [=relevant global object=] of [=this=] does not have
+                [=transient activation=], return a promise <a>rejected</a> with
+                a {{DOMException}} object whose {{DOMException/name}} attribute
+                has the value {{InvalidStateError}}.</p></li>
               <li><p>Let <var>options</var> be the method's first argument.</p></li>
               <li><p>Let <var>deviceId</var> be <var>options</var><code>.deviceId</code>.</p></li>
               <li><p>Let <var>p</var> be a new promise.</p></li>
@@ -301,6 +299,13 @@
                   <li><p>Let <var>deviceInfo</var> be a new {{MediaDeviceInfo}} object to represent the selected audio output device.</p></li>
                   <li><p>Add <var>deviceInfo</var>.{{MediaDeviceInfo/deviceId}}
                     to <a>[[\explicitelyGrantedAudioOutputDevices]]</a>.</p></li>
+                  <li><p>Perform the
+                    <a data-cite="!HTML/#activation-notification">activation notification</a> steps of the
+                    [=relevant global object=]'s [=browsing context=].</p></li>
+                  <div class="note">
+                    <p>This allows starting to play audio or calling {{HTMLMediaElement/setSinkId}} on fulfillment without
+                    additional user interaction.</p>
+                  </div>
                   <li><p>Resolve <var>p</var> with <var>deviceInfo</var>.</p></li>
                 </ol>
               </li>
@@ -308,10 +313,6 @@
             </ol>
             <p>Once a device is exposed after a call to {{MediaDevices/selectAudioOutput}}, it MUST be listed by
             {{MediaDevices/enumerateDevices()}} for the current browsing context.</p>
-            <p>If the promise returned by {{MediaDevices/selectAudioOutput}} is resolved,
-            user activation is enabled when executing the promise fulfillment handlers.
-            This allows starting to play audio or calling {{HTMLMediaElement/setSinkId}} synchronously
-            within these fulfillment handlers without any additional user gesture needed.</p>
           </dd>
         </dl>
       </section>
