--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             for the "speaker-selection" [=powerful feature=] with no
             {{DevicePermissionDescriptor/deviceId}} returns {{PermissionState/"granted"}}, the
             client knows that there will never be a permission prompt for an audio output device,
-            and if {{PermissionState/"denied"}} is returned, it knows that no getUserMedia request
+            and if {{PermissionState/"denied"}} is returned, it knows that no selectAudioOutput request
             for an audio output device will succeed.
           </p>
           <p>
