Fix respec error on missing ref to selectAudioOutput

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             {{DevicePermissionDescriptor/deviceId}} returns {{PermissionState/"granted"}}, the
             client knows that there will not be a permission prompt for any audio output device
             known to it, if requested using the {{AudioOutputOptions/deviceId}} option to
-            {{selectAudioOutput}},
+            {{MediaDevices/selectAudioOutput}},
             and if {{PermissionState/"denied"}} is returned, it knows that no selectAudioOutput request
             for an audio output device will succeed.
           </p>
