Editorial: use associated Document in place of responsible document

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
                 <p>Let <var>document</var> be the
                 <a data-cite="!HTML/webappapis.html#current-settings-object">
                 current settings object</a>'s
-                <a data-cite="!HTML/webappapis.html#responsible-document">
-                responsible document</a>.</p>
+                <a data-cite="!HTML/webappapis.html#concept-relevant-global">
+                relevant global object</a>'s
+                <a data-cite="!HTML/window-object.html#concept-document-window">
+                associated <code>Document</code></a>.</p>
               </li>
               <li>
                 <p>If <var>document</var> is not
@@ -407,8 +409,10 @@
           <p>Let <var>document</var> be the
           <a data-cite="!HTML/webappapis.html#current-settings-object">
           current settings object</a>'s
-          <a data-cite="!HTML/webappapis.html#responsible-document">
-          responsible document</a>.</p>
+          <a data-cite="!HTML/webappapis.html#concept-relevant-global">
+          relevant global object</a>'s
+          <a data-cite="!HTML/window-object.html#concept-document-window">
+          associated <code>Document</code></a>.</p>
         </li>
         <li><p>Let <var>deviceInfo</var> be a new {{MediaDeviceInfo}} object to represent the device.</p></li>
         <li>
