Fix default allowlist link that broke.

--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
       <p>This specification defines one
       [=policy-controlled feature=] identified by the string
       <code><dfn>"speaker-selection"</dfn></code>.
-      It has a
-      [=default allowlist=] of <code class=featurepolicy>"self"</code>.
+      It has a [=policy-controlled feature/default allowlist=]
+      of <code class=featurepolicy>"self"</code>.
       <div class="note">
         <p>A [=document=]'s [=Document/permissions policy=]
         determines whether any content in that document is
