Fix link to default allow list

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       [=policy-controlled feature=] identified by the string
       <code><dfn>"speaker-selection"</dfn></code>.
       It has a
-      [=default allowlist=] of <code class=featurepolicy>"self"</code>.
+      [=policy-controlled feature/default allowlist=] of <code class=featurepolicy>"self"</code>.
       <div class="note">
         <p>A [=document=]'s [=Document/permissions policy=]
         determines whether any content in that document is
@@ -524,7 +524,7 @@
   </section>
   <section id="conformance">
     <p>This specification defines conformance criteria that apply to a single
-    product: the <dfn>user agent</dfn> that implements the interfaces that it
+    product: the user agent that implements the interfaces that it
     contains.</p>
     <p>Conformance requirements phrased as algorithms or specific steps may be
     implemented in any manner, so long as the end result is equivalent. (In
