Revert useragent de-dfn

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
   </section>
   <section id="conformance">
     <p>This specification defines conformance criteria that apply to a single
-    product: the user agent that implements the interfaces that it
+    product: the <dfn>user agent</dfn> that implements the interfaces that it
     contains.</p>
     <p>Conformance requirements phrased as algorithms or specific steps may be
     implemented in any manner, so long as the end result is equivalent. (In
